Bugfix: Ensure invisible-elements are actually invisible
This adds multiple methods to ensure that in no way the invisible-elements will take up space.

--- a/sites/all/themes/genesis/genesis_mcneese/css/clean.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/clean.css
@@ -20,6 +20,18 @@ div#footer {
   position: relative;
 }
 
+.element-invisible {
+  display: block;
+
+  font-size: 0;
+
+  width: 0;
+  max-width: 0;
+  height: 0;
+  max-height: 0;
+  overflow: hidden;
+}
+
 input.form-submit, a.button {
   border: 1px outset #333333;
   cursor: pointer;
